# screech

./: .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: main.yml
benches/: my_benchmark.rs  sampling_speed.rs
examples/: oscillator.rs  routing.rs
screech/: .gitignore  Cargo.toml
screech-macro/: Cargo.toml
screech-macro/src/: lib.rs
screech/benches/: processor_process_modules.rs  processor_sort.rs  screech_vs_direct.rs
screech/examples/: dynamic.rs  oscillator.rs  sequence.rs  to_wav.rs  vca.rs
screech/src/: lib.rs  module.rs  patchbay.rs  processor.rs  signal.rs
screech/src/modules/: clock.rs  dummy.rs  envelope.rs  mix.rs  mod.rs  oscillator.rs  vca.rs
src/: clip.rs  graph.rs  lib.rs  message.rs  mod_source.rs  oscillator.rs  primary.rs  sample.rs  signal.rs  signal_id.rs  slew.rs  stream.rs  track.rs  traits.rs
src/basic/: clip.rs  mod.rs  oscillator.rs  slew.rs  track.rs
src/core/: external_signal.rs  graph.rs  mod.rs  point.rs  primary.rs  signal.rs  stream.rs  tracker.rs
src/core/tracker/: basic_tracker.rs  dynamic_tracker.rs
src/tracker/: basic_tracker.rs  dynamic_tracker.rs  mod.rs
