[package]
name = "screech"
version = "0.3.0"
authors = ["Samuel Leeuwenburg <samleeuwenburg@gmail.com>"]
edition = "2018"
description = "collection of helpers for handling audio"
repository = "https://github.com/samuelleeuwenburg/screech"
documentation = "https://docs.rs/wavv"
license = "Apache-2.0"
keywords = ["audio", "no_std"]

[dependencies]
libm = "0.2.1"
