[package]
name = "screech"
version = "0.8.0"
authors = ["Samuel Leeuwenburg <samleeuwenburg@gmail.com>"]
edition = "2018"
description = "A collection of helpers for handling audio data in real time"
repository = "https://github.com/samuelleeuwenburg/screech"
documentation = "https://docs.rs/wavv"
license = "Apache-2.0"
keywords = ["audio", "no_std"]

[dependencies]
libm = "0.2.1"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
