[package]
name = "screech"
version = "0.10.0"
authors = ["Samuel Leeuwenburg <samleeuwenburg@gmail.com>"]
edition = "2018"
description = "A collection of helpers for handling audio data in real time"
repository = "https://github.com/samuelleeuwenburg/screech"
documentation = "https://docs.rs/wavv"
license = "Apache-2.0"
keywords = ["audio", "no_std"]

[dependencies]
screech-macro = {version = "0.1", path = "../screech-macro"}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wavv = "0.2"

[[bench]]
name = "screech_vs_direct"
harness = false