[package]
name = "screech"
version = "0.12.0"
authors = ["Samuel Leeuwenburg <samleeuwenburg@gmail.com>"]
edition = "2018"
description = "A collection of helpers for handling audio data in real time"
repository = "https://github.com/samuelleeuwenburg/screech"
documentation = "https://docs.rs/screech"
license = "Apache-2.0"
keywords = ["audio", "no_std"]

[dependencies]

[dev-dependencies]
screech-macro = {version = "0.1", path = "../screech-macro"}
criterion = { version = "0.5", features = ["html_reports"] }
wavv = "0.2"
rand = "0.8.5"

[[bench]]
name = "processor_process_modules"
harness = false

[[bench]]
name = "processor_sort"
harness = false

[[bench]]
name = "screech_vs_direct"
harness = false